# jako

./: .dockerignore  .gitignore  Dockerfile  README.md  publish.sh  pyproject.toml
.github/workflows/: deploy.yml
frontend/: .env.sample  package-lock.json  package.json  vercel.json
frontend/app/: root.tsx  storage.ts
frontend/app/css/: wiki.module.css  wikipedia-site-20250101.css
frontend/app/routes/: _index.tsx  indexnowkey.ts  w.$.tsx  wiki.$.tsx
src/jako/: cache.py  checkpoint.py  llm.py  preprocess_html.py  publish.py  scrape.py  translate.py  worker.py
src/jako/models/: page.py  prompt.py
src/jako/prompts/: glossary.py  translate_v1.py
src/jako/translators/: gemini_v1.py  gemini_v2.py  gemini_v3.py  openai_v1.py  utils.py
src/jako/web/: server.py
src/jako/web/static/: style.css
src/jako/web/templates/: debug.html  list.html  result.html  source.html  source_list.html
tests/: test_preprocess_html.py
tests/resources/: mediawiki_sample.html
tests/translators/: test_utils.py
