[project]
name = "jako"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Taeho Kim", email = "dittos@gmail.com" }
]
dependencies = [
    "requests>=2.32.3",
    "beautifulsoup4>=4.12.3",
    "tiktoken>=0.8.0",
    "openai>=1.53.0",
    "pydantic>=2.9.2",
    "google-generativeai>=0.8.3",
    "pandas>=2.2.3",
    "matplotlib>=3.9.2",
    "fastapi>=0.115.4",
    "jinja2>=3.1.4",
    "uvicorn>=0.32.0",
    "tqdm>=4.67.0",
    "anthropic>=0.39.0",
    "google-cloud-translate>=3.18.0",
    "google-genai>=0.3.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "ipykernel>=6.29.5",
    "pytest>=8.3.3",
    "watchfiles>=1.0.3",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/jako"]
